[tool.poetry]
name = "sadg-controller"
version = "0.1.0"
description = "Switchable Action Dependency Graph (SADG) control scheme for MAPF plan re-ordering"
authors = ["Alex Berndt <berndtae@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
mip = "^1.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
