[tool.poetry]
name = "sadg-controller"
version = "0.1.0"
description = "Switchable Action Dependency Graph (SADG) control scheme for MAPF plan re-ordering"
authors = ["Alex Berndt <berndtae@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
mip = "^1.14.0"
PyYAML = "^6.0"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"
pylama = "^8.3.8"
pre-commit = "^2.19.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
