<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sadg_controller</name>
  <version>0.0.0</version>
  <description>Implementation of the SADG RHC feedback control scheme to reduce route completion times of delayed agents following MAPF plans. </description>

  <maintainer email="berndtae@gmail.com">Alex Berndt</maintainer>

  <license>Proprietary</license>

  <exec_depend>libmultirobotplanning</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
